[gd_scene load_steps=52 format=3 uid="uid://difolhje4qshv"]

[ext_resource type="Script" uid="uid://7s2avvmicf4j" path="res://Player/player.gd" id="1_onrkg"]
[ext_resource type="Resource" uid="uid://cevxedpjw068j" path="res://Player/main_color_map.tres" id="2_n471f"]
[ext_resource type="Script" uid="uid://dej8xkwj66gk1" path="res://Player/vertical_movement.gd" id="3_i3pqv"]
[ext_resource type="Script" uid="uid://cummtyr5lavnp" path="res://Player/horizontal_movement.gd" id="4_hqtel"]
[ext_resource type="Shader" uid="uid://wyxymtgvihrk" path="res://Player/change_color.gdshader" id="4_o28un"]
[ext_resource type="Script" uid="uid://6wrg0orn1l5y" path="res://Player/anim_handler.gd" id="5_2hs0m"]
[ext_resource type="Script" uid="uid://0h5qafn8d55t" path="res://Player/hit_handler.gd" id="5_p5o4e"]
[ext_resource type="Texture2D" uid="uid://dqcy7s6ohdqad" path="res://Sprites/goose-Sheet.png" id="5_sweqy"]
[ext_resource type="Script" uid="uid://c64eyy0lkex7j" path="res://Player/wall_jump.gd" id="6_2hs0m"]
[ext_resource type="Script" uid="uid://b77con38nd63l" path="res://Player/attack_handler.gd" id="7_b26j0"]
[ext_resource type="Resource" uid="uid://bl10p7n4y537l" path="res://Attacks/main_attack_set.tres" id="11_5htga"]
[ext_resource type="Script" uid="uid://euqlrk38ot1c" path="res://Player/input_handler.gd" id="11_apopc"]
[ext_resource type="Script" uid="uid://5bumq6m7sqfd" path="res://Player/crouch.gd" id="14_gu6f8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fj7yv"]
size = Vector2(48, 48)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n471f"]
resource_local_to_scene = true
shader = ExtResource("4_o28un")
shader_parameter/base = Color(0.956863, 0.494118, 0.105882, 1)
shader_parameter/secondary = Color(0.662745, 0.231373, 0.231373, 1)
shader_parameter/og_base = Color(0.956863, 0.494118, 0.105882, 1)
shader_parameter/og_secondary = Color(0.662745, 0.231373, 0.231373, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3vf3"]
atlas = ExtResource("5_sweqy")
region = Rect2(136, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy65m"]
atlas = ExtResource("5_sweqy")
region = Rect2(986, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp1hh"]
atlas = ExtResource("5_sweqy")
region = Rect2(816, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4pp"]
atlas = ExtResource("5_sweqy")
region = Rect2(850, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyprq"]
atlas = ExtResource("5_sweqy")
region = Rect2(884, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ie76m"]
atlas = ExtResource("5_sweqy")
region = Rect2(544, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4lon"]
atlas = ExtResource("5_sweqy")
region = Rect2(544, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ynux"]
atlas = ExtResource("5_sweqy")
region = Rect2(510, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_d30e8"]
atlas = ExtResource("5_sweqy")
region = Rect2(918, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pogt"]
atlas = ExtResource("5_sweqy")
region = Rect2(952, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6x0f"]
atlas = ExtResource("5_sweqy")
region = Rect2(782, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_755ss"]
atlas = ExtResource("5_sweqy")
region = Rect2(680, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2n6q"]
atlas = ExtResource("5_sweqy")
region = Rect2(714, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = ExtResource("5_sweqy")
region = Rect2(510, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viyr"]
atlas = ExtResource("5_sweqy")
region = Rect2(544, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbimk"]
atlas = ExtResource("5_sweqy")
region = Rect2(748, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = ExtResource("5_sweqy")
region = Rect2(340, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = ExtResource("5_sweqy")
region = Rect2(374, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lrf"]
atlas = ExtResource("5_sweqy")
region = Rect2(612, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_efx54"]
atlas = ExtResource("5_sweqy")
region = Rect2(646, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = ExtResource("5_sweqy")
region = Rect2(408, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0h3t"]
atlas = ExtResource("5_sweqy")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4o1l"]
atlas = ExtResource("5_sweqy")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = ExtResource("5_sweqy")
region = Rect2(442, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = ExtResource("5_sweqy")
region = Rect2(476, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0op"]
atlas = ExtResource("5_sweqy")
region = Rect2(578, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = ExtResource("5_sweqy")
region = Rect2(306, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = ExtResource("5_sweqy")
region = Rect2(0, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = ExtResource("5_sweqy")
region = Rect2(34, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfmf2"]
atlas = ExtResource("5_sweqy")
region = Rect2(102, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = ExtResource("5_sweqy")
region = Rect2(68, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = ExtResource("5_sweqy")
region = Rect2(238, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = ExtResource("5_sweqy")
region = Rect2(272, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = ExtResource("5_sweqy")
region = Rect2(170, 0, 34, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = ExtResource("5_sweqy")
region = Rect2(204, 0, 34, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3vf3")
}],
"loop": true,
"name": &"air",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy65m")
}],
"loop": false,
"name": &"attack_abspec",
"speed": 4.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_jp1hh")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_qs4pp")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_iyprq")
}],
"loop": false,
"name": &"attack_abtilt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie76m")
}],
"loop": false,
"name": &"attack_adspec",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4lon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ynux")
}],
"loop": false,
"name": &"attack_adtilt",
"speed": 4.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_d30e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pogt")
}],
"loop": false,
"name": &"attack_aftilt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6x0f")
}],
"loop": false,
"name": &"attack_antilt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_755ss")
}],
"loop": false,
"name": &"attack_dash",
"speed": 4.0
}, {
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_j2n6q")
}],
"loop": false,
"name": &"attack_dspec",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8viyr")
}],
"loop": false,
"name": &"attack_dtilt",
"speed": 4.0
}, {
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_bbimk")
}],
"loop": false,
"name": &"attack_fspec",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}],
"loop": false,
"name": &"attack_ftilt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efx54")
}],
"loop": false,
"name": &"attack_nspec",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}],
"loop": false,
"name": &"attack_ntilt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0h3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4o1l")
}],
"loop": false,
"name": &"attack_uspec",
"speed": 4.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}],
"loop": false,
"name": &"attack_utilt",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0op")
}],
"loop": true,
"name": &"crouch",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}],
"loop": false,
"name": &"flip",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfmf2")
}],
"loop": false,
"name": &"jump",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}],
"loop": false,
"name": &"jump_queue",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}],
"loop": true,
"name": &"run",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[node name="Player" type="CharacterBody2D"]
z_index = 2
collision_layer = 4
collision_mask = 3
script = ExtResource("1_onrkg")
color_map = ExtResource("2_n471f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fj7yv")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_n471f")
position = Vector2(0, -28)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_dw050")
animation = &"attack_abtilt"
autoplay = "idle"
frame = 2
frame_progress = 1.0

[node name="HitHandler" type="Node" parent="."]
script = ExtResource("5_p5o4e")
metadata/_custom_type_script = "uid://b1hxng224wd66"

[node name="VerticalMovement" type="Node" parent="." node_paths=PackedStringArray("h_movement")]
script = ExtResource("3_i3pqv")
h_movement = NodePath("../HorizontalMovement")
metadata/_custom_type_script = "uid://b1hxng224wd66"

[node name="HorizontalMovement" type="Node" parent="." node_paths=PackedStringArray("sprites")]
script = ExtResource("4_hqtel")
sprites = NodePath("../Sprites")
metadata/_custom_type_script = "uid://b1hxng224wd66"

[node name="AnimHandler" type="Node" parent="." node_paths=PackedStringArray("sprites")]
script = ExtResource("5_2hs0m")
sprites = NodePath("../Sprites")
metadata/_custom_type_script = "uid://b1hxng224wd66"

[node name="WallJump" type="Node" parent="."]
script = ExtResource("6_2hs0m")
metadata/_custom_type_script = "uid://b1hxng224wd66"

[node name="Crouch" type="Node" parent="."]
script = ExtResource("14_gu6f8")
metadata/_custom_type_script = "uid://b1hxng224wd66"

[node name="Attacks" type="Node2D" parent="." node_paths=PackedStringArray("sprites")]
script = ExtResource("7_b26j0")
attacks = ExtResource("11_5htga")
sprites = NodePath("../Sprites")

[node name="InputHandler" type="Node" parent="."]
script = ExtResource("11_apopc")
metadata/_custom_type_script = "uid://b1hxng224wd66"

[connection signal="animation_finished" from="Sprites" to="AnimHandler" method="_on_sprites_animation_finished"]
[connection signal="animation_finished" from="Sprites" to="Attacks" method="_on_sprites_animation_finished"]
[connection signal="jump_queued" from="VerticalMovement" to="AnimHandler" method="_on_vertical_movement_jump_queued"]
[connection signal="jumped" from="VerticalMovement" to="AnimHandler" method="_on_vertical_movement_jumped"]
[connection signal="didnt_move" from="HorizontalMovement" to="AnimHandler" method="_on_horizontal_movement_didnt_move"]
[connection signal="flip" from="HorizontalMovement" to="AnimHandler" method="_on_horizontal_movement_flip"]
[connection signal="flip" from="HorizontalMovement" to="Attacks" method="_on_horizontal_movement_flip"]
[connection signal="moved" from="HorizontalMovement" to="AnimHandler" method="_on_horizontal_movement_moved"]
[connection signal="crouched" from="Crouch" to="AnimHandler" method="_on_crouch_crouched"]
[connection signal="attack_started" from="Attacks" to="AnimHandler" method="_on_attacks_attack_started"]
